<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/background_light">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="#668cff"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/group_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/group_1"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_0"
        android:textSize="70sp" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/count_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="incrementCount"
        android:text="@string/increment"
        android:textSize="24sp" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:text="@string/decrement"
        android:textSize="24sp"
        android:layout_below="@id/count_text"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_alignParentStart="true"
        android:onClick="decrementCount"/>



</RelativeLayout>
