<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF3F51B5"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/captcha_typing"
        android:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/code_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/generated_code"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input_edittext"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_below="@id/code_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_code"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/submit" />

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/generate_another_key" />

</RelativeLayout>


